# samp_plugin_raw

./: .gitignore  CMakeLists.txt  README.md  build.sh
inc/: defines.h
inc/amx/: CMakeLists.txt
inc/invoke/: CMakeLists.txt  invoke.c  invoke.h
server/gamemodes/: main.pwn
server/include/: myplugin.inc
src/: main.c
